fixed content/color/alignment issues on home page

--- a/frontend/src/components/home/css/pagination.css
+++ b/frontend/src/components/home/css/pagination.css
@@ -19,6 +19,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  color: #421e1e;
 }
 
 .selected_ul {
