--- a/frontend/src/components/home/css/product.css
+++ b/frontend/src/components/home/css/product.css
@@ -7,9 +7,9 @@
   --heart-background: rgb(245, 210, 209);
 }
 
-span {
+/* span {
   margin-top: 2rem;
-}
+} */
 
 .product_img {
   width: 20rem;
